# modbus-rtu-data-collector

./: .gitignore  Cargo.toml  README.md  main.py  psim.sh  pyproject.toml
docs/: main.tex
src/: main.rs
